--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
 	
 	<!-- Animate.css -->
-	<link rel="stylesheet" href="https://susieyvictormanuel.lovestoblog.com/css/animate.css">
+	<link rel="stylesheet" href="https://rushwhq2023.github.io/susie/css/animate.css">
 	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="https://susieyvictormanuel.lovestoblog.com/css/icomoon.css">
+	<link rel="stylesheet" href="https://rushwhq2023.github.io/susie/css/icomoon.css">
 	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="https://susieyvictormanuel.lovestoblog.com/css/bootstrap.css">
+	<link rel="stylesheet" href="https://rushwhq2023.github.io/susie/css/bootstrap.css">
 
 	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="https://susieyvictormanuel.lovestoblog.com/css/magnific-popup.css">
+	<link rel="stylesheet" href="https://rushwhq2023.github.io/susie/css/magnific-popup.css">
 
 	<!-- Owl Carousel  -->
-	<link rel="stylesheet" href="https://susieyvictormanuel.lovestoblog.com/css/owl.carousel.min.css">
-	<link rel="stylesheet" href="https://susieyvictormanuel.lovestoblog.com/css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="https://rushwhq2023.github.io/susie/css/owl.carousel.min.css">
+	<link rel="stylesheet" href="https://rushwhq2023.github.io/susie/css/owl.theme.default.min.css">
 
 	<!-- Theme style  -->
-	<link rel="stylesheet" href="https://susieyvictormanuel.lovestoblog.com/css/style.css">
+	<link rel="stylesheet" href="https://rushwhq2023.github.io/susie/css/style.css">
 
 	<!-- Modernizr JS -->
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/modernizr-2.6.2.min.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/respond.min.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/respond.min.js"></script>
 	<![endif]-->
 
  <script src="https://kit.fontawesome.com/940f8b595a.js" crossorigin="anonymous"></script>
@@ -64,7 +64,7 @@
 			<!--<b><h2>Nos casamos</h2></b>-->
   <button  class="btn btn-primary  btn-lg  btn-block">DALE PLAY AQUI</button>
   <audio id="myaudio" autoplay>
-    <source src="https://susieyvictormanuel.lovestoblog.com/sound.mp3" type="audio/mpeg"/>
+    <source src="https://rushwhq2023.github.io/susie/sound.mp3" type="audio/mpeg"/>
   </audio>
 
 
@@ -109,7 +109,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(https://susieyvictormanuel.lovestoblog.com/images/img_bg_2.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(https://rushwhq2023.github.io/susie/images/img_bg_2.jpg);" data-stellar-background-ratio="0.5">
 
 		<div class="overlay"></div>
 		<div class="container">
@@ -148,7 +148,7 @@
 			<div class="couple-wrap animate-box">
 				<div class="couple-half">
 					<div class="groom">
-					<img src="https://susieyvictormanuel.lovestoblog.com/black.png" alt="groom" class="img-responsive">
+					<img src="https://rushwhq2023.github.io/susie/black.png" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-groom">
 						<h3><b>Dress Code!<br>Formal</b></h3>
@@ -161,7 +161,7 @@
 			</div>
 				<div class="couple-half">
 					<div class="bride">
-						<img src="https://susieyvictormanuel.lovestoblog.com/groom.png" alt="groom" class="img-responsive">
+						<img src="https://rushwhq2023.github.io/susie/groom.png" alt="groom" class="img-responsive">
 					</div>
 					<div class="desc-bride">
 						<h3></h3></b>
@@ -173,7 +173,7 @@
 		</div>
 	</div><br><br><br>
 
-	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(https://susieyvictormanuel.lovestoblog.com/images/img_bg_3.jpg);">
+	<div id="fh5co-event" class="fh5co-bg" style="background-image:url(https://rushwhq2023.github.io/susie/images/img_bg_3.jpg);">
 		<div class="overlay"></div>
 		<div class="container"></div>
 					<!--<div class="text-center fh5co-heading animate-box">
@@ -268,7 +268,7 @@
 
 
 
-	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(https://susieyvictormanuel.lovestoblog.com/images/img_bg_4.jpg);">
+	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(https://rushwhq2023.github.io/susie/images/img_bg_4.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<br><br><br><br><br>
@@ -333,28 +333,28 @@
 	</div>
 	
 	<!-- jQuery -->
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/jquery.min.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/jquery.easing.1.3.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/jquery.easing.1.3.js"></script>
 	<!-- Bootstrap -->
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/bootstrap.min.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/bootstrap.min.js"></script>
 	<!-- Waypoints -->
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/jquery.waypoints.min.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/jquery.waypoints.min.js"></script>
 	<!-- Carousel -->
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/owl.carousel.min.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/owl.carousel.min.js"></script>
 	<!-- countTo -->
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/jquery.countTo.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/jquery.countTo.js"></script>
 
 	<!-- Stellar -->
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/jquery.stellar.min.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/jquery.stellar.min.js"></script>
 	<!-- Magnific Popup -->
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/jquery.magnific-popup.min.js"></script>
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/magnific-popup-options.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/jquery.magnific-popup.min.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/magnific-popup-options.js"></script>
 
 	<!-- // <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/0.0.1/prism.min.js"></script> -->
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/simplyCountdown.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/simplyCountdown.js"></script>
 	<!-- Main -->
-	<script src="https://susieyvictormanuel.lovestoblog.com/js/main.js"></script>
+	<script src="https://rushwhq2023.github.io/susie/js/main.js"></script>
 
 	<script>
     var d = new Date(new Date().getTime() + 200 * 120 * 120 * 2000);
