--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Susie & Victor Manuel</title>
+	<title>Susie & Victor Manuel te invitan a su boda</title>
 
 
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
+<meta property="og:title" content="Susie y Victor Manuel">
+        <meta property="og:description" content="Nos casamos y te invitamos a nuestra boda este proximo 8 de Febrero del 2025. Confirma tu asistencia ingresando aqui">
+<meta property="og:site_name" content="SusieyManuelVictor">
+<meta property="og:url" content="https://rushwhq2023.github.io/susie/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://rushwhq2023.github.io/susie/chula.png">
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
