--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
 				<div class="col-md-1 col-md-offset-1 text-center fh5co-heading animate-box">
 					<span></span>
 					<h2>Regalos</h2>
-					<p><font color="#000">"Que formes parte de este día especial, es lo más importante para nosotros.<br>
-					 Si deseas darnos un obsequio puedes hacerlo a traves de Yape/Plin/BCP"</font>	</p>
+					<p><font color="#000">Que formes parte de este día especial, es lo más importante para nosotros.<br>
+					 Si deseas darnos un obsequio puedes hacerlo a traves de Yape/Plin/BCP</font>	</p>
 <br><br>
 					 <div class="col-md-6 col-sm-6">
 					 
@@ -270,49 +270,6 @@
 		</div>
 	</div>
 
-
-
-	<div id="fh5co-started" class="fh5co-bg" style="background-image:url(https://rushwhq2023.github.io/susie/images/img_bg_4.jpg);">
-		<div class="overlay"></div>
-		<div class="container">
-			<br><br><br><br><br>
-
-
-			<!--<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Regalos</h2>
-					<p>Que formes parte de este día especial es lo más importante para nosotros. Si deseas darnos un obsequio puedes hacerlo a traves de.</p>
-				</div>
-			</div>-->
-			<div class="row animate-box">
-				<div class="col-md-10 col-md-offset-1">
-
-<!--<script src="https://cdn.logwork.com/widget/countdown.js"></script>
-<a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="America/Lima" data-language="es" data-date="2025-02-08 12:00" data-digitscolor="#cc00ff"><font color="#000">Nuestra boda sera en</font></a>-->
-	
-		<!--<div class="col-md-6 col-sm-6">
-							<div class="form-group">
-							<font color="#000" size="2">Victor Manuel</font><br>
-							<button class="btn">BCP : 19131729392088</button><br>
-							<button class="btn">CCI: 00219113172939208857</button><br>
-							<button class="btn">Yape/Plin: 944321708</button><br>
-							</div>
-						</div><p></p><p></p> -->
-
-<!--
-						<div class="col-md-6 col-sm-6">
-							<div class="form-group">
-							<font color="#000">Susie</font><br>
-							<button class="btn">BCP: 19334833477028</button><br>
-							<button class="btn">CCI: 00219313483347702818</button><br>
-							<button class="btn">Yape/Plin: 984127257</button><br>
-
-							</div>-->
-						</div>
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
