--- a/index.html
+++ b/index.html
@@ -7,15 +7,28 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Susie & Victor Manuel te invitan a su boda</title>
+	
 
+<!-- HTML Meta Tags -->
+<title>Susie y Victor Manuel</title>
+<meta name="description" content="Nos casamos y te invitamos a nuestra boda este proximo 8 de Febrero del 2025. Confirma tu asistencia ingresando aqui">
 
-<meta property="og:title" content="Susie y Victor Manuel">
-        <meta property="og:description" content="Nos casamos y te invitamos a nuestra boda este proximo 8 de Febrero del 2025. Confirma tu asistencia ingresando aqui">
-<meta property="og:site_name" content="SusieyManuelVictor">
+<!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://rushwhq2023.github.io/susie/">
 <meta property="og:type" content="website">
-<meta property="og:image" content="https://rushwhq2023.github.io/susie/chula.png">
+<meta property="og:title" content="Susie y Victor Manuel">
+<meta property="og:description" content="Nos casamos y te invitamos a nuestra boda este proximo 8 de Febrero del 2025. Confirma tu asistencia ingresando aqui">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/f32441ad-c323-4563-bf90-5d17e6a5d593.png?token=0RA0KuNNSKhjg1O_IqkL66GI0b_Jz9t_jZqe7y9k27o&height=801&width=1200&expires=33270869426">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="rushwhq2023.github.io">
+<meta property="twitter:url" content="https://rushwhq2023.github.io/susie/">
+<meta name="twitter:title" content="Susie y Victor Manuel">
+<meta name="twitter:description" content="Nos casamos y te invitamos a nuestra boda este proximo 8 de Febrero del 2025. Confirma tu asistencia ingresando aqui">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/f32441ad-c323-4563-bf90-5d17e6a5d593.png?token=0RA0KuNNSKhjg1O_IqkL66GI0b_Jz9t_jZqe7y9k27o&height=801&width=1200&expires=33270869426">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Sacramento" rel="stylesheet">
