--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Susie y Victor Manuel">
 <meta property="og:description" content="Nos casamos y te invitamos a nuestra boda este proximo 8 de Febrero del 2025. Confirma tu asistencia ingresando aqui">
-<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/f32441ad-c323-4563-bf90-5d17e6a5d593.png?token=0RA0KuNNSKhjg1O_IqkL66GI0b_Jz9t_jZqe7y9k27o&height=801&width=1200&expires=33270869426">
+<meta property="og:image" content="./chula.png"/>
 
+
+	  
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="rushwhq2023.github.io">
 <meta property="twitter:url" content="https://rushwhq2023.github.io/susie/">
 <meta name="twitter:title" content="Susie y Victor Manuel">
 <meta name="twitter:description" content="Nos casamos y te invitamos a nuestra boda este proximo 8 de Febrero del 2025. Confirma tu asistencia ingresando aqui">
-<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/f32441ad-c323-4563-bf90-5d17e6a5d593.png?token=0RA0KuNNSKhjg1O_IqkL66GI0b_Jz9t_jZqe7y9k27o&height=801&width=1200&expires=33270869426">
+<meta name="twitter:image" content="./chula.png">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
