--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Susie y Victor Manuel">
 <meta property="og:description" content="Nos casamos y te invitamos a nuestra boda este proximo 8 de Febrero del 2025. Confirma tu asistencia ingresando aqui">
-<meta property="og:image" content="https://raw.githubusercontent.com/rushwhq2023/susie/1d3203ec6c36dea5ce70b73192fbd1c631688575/chula.png"/>
+<meta property="og:image" content="https://github.com/akibrhast/Hack-Or-Snooze/blob/master/icon.png">
 
 
 	  
@@ -24,7 +24,7 @@
 <meta property="twitter:url" content="https://rushwhq2023.github.io/susie/">
 <meta name="twitter:title" content="Susie y Victor Manuel">
 <meta name="twitter:description" content="Nos casamos y te invitamos a nuestra boda este proximo 8 de Febrero del 2025. Confirma tu asistencia ingresando aqui">
-<meta name="twitter:image" content="https://raw.githubusercontent.com/rushwhq2023/susie/1d3203ec6c36dea5ce70b73192fbd1c631688575/chula.png">
+<meta name="twitter:image" content="https://github.com/akibrhast/Hack-Or-Snooze/blob/master/icon.png">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
