--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <meta property="og:title" content="Susie y Victor Manuel">
 <meta property="og:description" content="Nos casamos y te invitamos a nuestra boda este proximo 8 de Febrero del 2025. Confirma tu asistencia ingresando aqui">
 <meta property="og:image" content="https://github.com/rushwhq2023/susie/blob/0bcc6714ebfe9135935b5a1fe22e80e9ea9170a7/cropped-chula.png">
-
-
+<meta property="og:image:width" content="693">
+<meta property="og:image:height" content="694">
 	  
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
